--- a/src/estilos/global.scss
+++ b/src/estilos/global.scss
@@ -22,6 +22,17 @@ img {
 
 	&.w100 {
 		width: 100%;
+
+		&.trim {
+			width: 100%; // calc(100% - #{$bv*2});
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+
+			@include bigger-than() {
+				width: calc(100% - #{$bv*2});
+			}
+		}
 	}
 
 	&.enc {
