--- a/src/estilos/_mixins.scss
+++ b/src/estilos/_mixins.scss
@@ -113,7 +113,7 @@
 			// box-shadow: 0 0 30px #000;
 			z-index: 2;
 	  		opacity: 0;
-			border: 4px solid #000;
+			border: none; // 4px solid #000;
 
 			.button-rack {
 				display: none;
