lighten border on page images

--- a/src/estilos/global.scss
+++ b/src/estilos/global.scss
@@ -1707,7 +1707,7 @@ ul.icons {
 }
 
 .edge {
-    border: 4px solid #000; // 1px solid #eee;
+    border: 1px solid #ddd;// 4px solid #000; // 
     // box-shadow: 0 0 10px #eee;
 }
 
