calm down content bumper

--- a/src/estilos/global.scss
+++ b/src/estilos/global.scss
@@ -869,6 +869,12 @@ ul.icons {
 	    	opacity: 1;
 	    }
 	}
+	.content .bumper {
+		background: #fff url(~@/assets/bg-bars.png) fixed;
+		// opacity: 0.4;
+		height: 2px;
+		border: none;
+	}
   
   	header {
 
