--- a/src/estilos/global.scss
+++ b/src/estilos/global.scss
@@ -78,7 +78,7 @@ a {
 	border: 2px solid #000;
 	text-decoration: none;
 	color: $ylo;
-	border-radius: 4px;
+	// border-radius: 4px;
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 0.9rem;
@@ -112,7 +112,7 @@ a {
 		  border-color: #000; // darken($ylo, 25%);
 		  color: #000;
 		  width: 124px;
-		  border-radius: 6px;
+		  // border-radius: 6px;
 		}
 	}
 
@@ -151,7 +151,7 @@ a {
 	  		border-color: transparent;
 	  		padding: 8px 12px;
 	  		text-transform: lowercase;
-	  		border-radius: 0;
+	  		// border-radius: 0;
 	  		font-size: 75%;
 
 	  		&:hover {
@@ -173,7 +173,7 @@ a {
 	  			margin-left: auto;
 	  			margin-right: auto;
 	  			min-width: 220px;
-	  			border-radius: 4px;
+	  			// border-radius: 4px;
 	  			text-transform: uppercase;
 
 	  			+.button {
@@ -189,7 +189,7 @@ a {
 	  	max-width: 440px;
 	  	padding: $bv/3;
 	  	border: none; // 1px solid #ccc;
-	  	border-radius: 3px;
+	  	// border-radius: 3px;
 	  	justify-content: space-between;
 	  	position: relative;
 		  @include smaller-than($bpsm) {
@@ -359,7 +359,7 @@ a {
 	      text-shadow: 0 1px 4px #000;
 	      background: rgba(0,0,0,0.7);
 	      padding: 2px 16px;
-	      border-radius: 4px;
+	      // border-radius: 4px;
 	    }
 	  }
 	}
@@ -1784,7 +1784,7 @@ ul.icons {
 		border: none;
 		outline: none;
 		background: $pbg!important; //#ccc!important;
-		border-radius: 0;
+		// border-radius: 0;
 		box-sizing: border-box;
 		font-size: 0.8rem!important;
 		cursor: pointer;
@@ -2064,7 +2064,7 @@ ul.icons {
 				width: 180px;
 				a {
 					background: rgba(255,255,255,0.1);
-					border-radius: 4px;
+					// border-radius: 4px;
 					width: 100%;
 					box-sizing: border-box;
 				}
