--- a/src/estilos/global.scss
+++ b/src/estilos/global.scss
@@ -619,7 +619,7 @@ ul.icons {
 		margin: $bv*2 0 0;
 
 		@include taller-than() {
-			margin: $bv*4 0;
+			//margin: $bv*4 0;
 		}
 	}
 	padding: 0;
@@ -633,9 +633,15 @@ ul.icons {
 		text-align: center;
 		width: 50%;
 		margin-bottom: 0;
+		position: relative;
 
 		@include bigger-than($bpmd) {
-			width: 33.333%;
+			width: 20%;
+			// width: 33.333%;
+
+			+ li {
+				margin-left: 20px; // -1px;
+			}
 		}
 
 		@include bigger-than() {
@@ -655,19 +661,25 @@ ul.icons {
 			font-size: 1.2rem;
 			background: transparent;
 			transition: all 0.2s;
-			border: 1px solid $pbg;
 			box-sizing: border-box;
+			position: relative;
 			
 			@include ihover() {
+				border: 1px solid darken($pbg, 5%);
+				z-index: 1;
+				background: lighten($pbg, 1%);
 				.fa {
 					font-size: 3rem;
 				}
 				color: #666;
-				transition: color 0.2s;
+				transition: all 0.2s;
+				box-shadow: 0 5px 8px darken($pbg, 5%);
 				&:hover {
+					box-shadow: 0 0 20px rgb(160,160,160);
 					color: #000;
 					background: #fff;
 					border: 1px solid #000;
+					z-index: 2;
 
 					.fa {
 						font-size: 3.6rem;
@@ -1004,20 +1016,20 @@ ul.icons {
 				width: 33.33333%;
 				margin-left: auto;
 				margin-right: auto;
-				border-left: 1px solid rgba(0,0,0,0.4);
-				border-right: 1px solid rgba(0,0,0,0.4);
+				// border-left: 1px solid rgba(0,0,0,0.4);
+				// border-right: 1px solid rgba(0,0,0,0.4);
 			}
   			
 
   			li {
   				// @include smaller-than() {
-  					width: 20%; // 16.66666%; // 
+  					width: 25%; // 16.66666%; //
   				// }
 
   				@include bigger-than() {
   					+li {
   						a {
-  							border-left: 1px solid rgba(0,0,0,0.4);
+  							// border-left: 1px solid rgba(0,0,0,0.4);
   						}
   					}
   				}
@@ -1088,7 +1100,7 @@ ul.icons {
 				position: absolute;
 				top: 36px;;
 				background: darken(#666, 16%);
-				left: -64%;
+				left: -43%;
 
 	  			span {
 	  				display: block;
@@ -2119,7 +2131,7 @@ ul.icons {
 
 		text-align: left;
 		display: flex;
-		justify-content: space-between; //center;
+		justify-content: center; // space-between
 		flex-wrap: wrap;
 		// max-width: 72%;
 		margin-left: auto;
